--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.5",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   },
   "dependencies": {
